* Added --no-history option to harpconvert, hardump, and harpmerge.

* harp_product_set_history() and harp_product_set_source_product() now accept
  NULL as argument to clear the current value.

* Update to S5P L2 product ingestion.

1.6 2019-04-29
~~~~~~~~~~~~~~

* Added clamp() and squash() operations.

* Allow bin() and sort() operations to be performed using a set of variables.

* harp_product_sort() now takes a list of variables.

* The rename() operation no longer fails if the source variable does not exist
  but a variable with the target name already exists.

* The python harp.import_product() function now uses the C library to perform
  the contactenation of products.

* Added post_operations argument to python harp.import_product() function.

* Besides using a polygon of >=3 vertices, a geospatial area can now also be
  defined via a bounding rect. Use e.g. 'latitude_bounds {time,2}' and
  'longitude_bounds {time,2}' to define the min/max of the bounding rect.

* Added derivation for tropospheric/stratospheric column from partial column
  profile and tropopause.

* Corrected derivation for calculating tropopause altitude/pressure.

* Deriving a variable will now use the conversion that requires the minimum
  amount of intermediate variables to be calculated.

* Added support for scene albedo/pressure/type variables.

* Fixed issue where regridding in the vertical dimension using pressure as axis
  could end up with wrong pressure_bounds values.

* Fixed problem in matlab mex extension determination on linux when using the
  configure script.

* Fixed setting of default CODA definition path and udunits2 xml path for
  Python on Windows.

* Added format, variable count, and dimension sizes to harpcheck output.

* Added support for TCCON products in GEOMS format.

* Updates to AEOLUS L2A, ESACCI_OZONE_L2_TC, GEOMS FTIR, GOME2 L2, OMI L2 NO2,
  QA4ECV, and S5P L2 product ingestions.

* Updated embedded expat library to version 2.2.6.

1.5 2018-12-17