@@ -210,7 +210,11 @@
 </li>
       <li><a href="python.html#harp.concatenate">harp.concatenate() (built-in function)</a>
 </li>
+      <li><a href="python.html#harp.convert_unit">harp.convert_unit() (built-in function)</a>
+</li>
       <li><a href="python.html#harp.Error">harp.Error</a>
+</li>
+      <li><a href="python.html#harp.execute_operations">harp.execute_operations() (built-in function)</a>
 </li>
       <li><a href="python.html#harp.export_product">harp.export_product() (built-in function)</a>
 </li>
@@ -416,10 +420,10 @@
 </li>
       <li><a href="libharp_general.html#_CPPv323harp_get_data_type_name14harp_data_type">harp_get_data_type_name (C++ function)</a>
 </li>
-      <li><a href="libharp_general.html#_CPPv328harp_get_fill_value_for_type14harp_data_type">harp_get_fill_value_for_type (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="libharp_general.html#_CPPv328harp_get_fill_value_for_type14harp_data_type">harp_get_fill_value_for_type (C++ function)</a>
+</li>
       <li><a href="libharp_general.html#_CPPv333harp_get_option_enable_aux_afgl86v">harp_get_option_enable_aux_afgl86 (C++ function)</a>
 </li>
       <li><a href="libharp_general.html#_CPPv334harp_get_option_enable_aux_usstd76v">harp_get_option_enable_aux_usstd76 (C++ function)</a>
